[package]
name = "rusty_rail"
version = "0.1.0"
authors = ["Robert Collins <robertc@robertcollins.net>"]

[dependencies]
libc="*"
ipnetwork = "*"
pnetlink= { version="*", git = "https://github.com/rbtcollins/pnetlink" }
siphasher = "~0.1"

[dependencies.netmap]
git = "https://github.com/rbtcollins/netmap-rs"

#[dependencies.netmap_sys]
#version = "0.1.0"
# Uncomment this line where you wish to use features guarded by the
# NETMAP_WITH_LIBS macro in C.
#features = ["netmap_with_libs"]

[dependencies.pnet]
version = ">=0.19.0"
#features = ["netmap"]

#[replace]
#"pnet:0.12.0" = { path = "../libpnet" }
#"pnet:0.13.0" = { path = "../libpnet" }
#"pnet_macros:0.11.0" = { path = "../libpnet/pnet_macros" }
#"pnet_macros_support:0.1.1" = { path = "../libpnet/pnet_macros_support" }
